--- a/src/main/resources/mq-manager.yaml
+++ b/src/main/resources/mq-manager.yaml
@@ -1,3 +1,4 @@
 # 消息发送者实现
 rabbitmq: net.jkcode.jkmq.mqmgr.rabbitmq.RabbitMqManager
 kafka: net.jkcode.jkmq.mqmgr.kafka.KafkaMqManager
+redis: net.jkcode.jkmq.mqmgr.redis.RedisMqManager
