--- a/src/main/resources/kafka-producer.yaml
+++ b/src/main/resources/kafka-producer.yaml
@@ -4,7 +4,7 @@ default:
     retries: 0 # 重试次数
     batch.size: 16384 # 成批发送的消息大小, 单位byte
     linger.ms: 100 # 定时发送的时间间隔, 单位ms
-swarmDiscovery: # 用于docker swarm模式下的服务发现的广播
+k8sDiscovery: # 用于k8s模式下的服务发现的广播
     bootstrap.servers: 192.168.0.170:9092 # kafka broker server, 多个用逗号分割
     acks: all # 回令类型
     retries: 0 # 重试次数
