--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ buildscript {
         jcenter()
         mavenCentral()
         maven {
-            url 'http://maven.aliyun.com/nexus/content/repositories/snapshots'
+            url 'https://maven.aliyun.com/repository/public/'
         }
         maven {
             url "http://dl.bintray.com/kotlin/kotlin"
@@ -81,7 +81,7 @@ project(':') {
         mavenLocal()
         mavenCentral()
         maven {
-            url 'http://maven.aliyun.com/nexus/content/repositories/snapshots'
+            url 'https://maven.aliyun.com/repository/public/'
         }
         maven {
             url "http://dl.bintray.com/kotlin/kotlin"
